feat: Spring Boot 4·React SPA로 마이그레이션하고 레거시 WAR 제거
Maven/Tomcat WAR·AngularJS/JSP를 제거하고 Gradle 멀티모듈(Boot 4) API와
Vite+React 프론트를 단일 실행 스택으로 통합한다.

- API: Flyway, REST CRUD, JDBC 집계, Spring Security 세션, OpenAPI
- RBAC(admin/manager/viewer), Users API, H2/Postgres 프로필
- Frontend: AdminLTE 레이아웃, Configuration 워크벤치, 보드 뷰(ECharts)
- 사이드바 접기, 보드 진입 시 자동·전체 차트 sync, fixed 레이아웃
- dev: run-api.sh, stop-dev.sh, docker-compose.postgres.yml
- docs/migration 로드맵·아키텍처 문서, AGENTS.md 갱신